[package]
name = "bbs"
version = "0.4.0"
edition = "2024"
authors = ["JLer <jlerxky@live.com>"]

[dependencies]
axum-extra = { version = "0.12", features = ["typed-header"] }
base32 = "0.5"
bs58 = "0.5"
ckb-jsonrpc-types = "0.202"
ckb-sdk = "4.4"
ckb-types = "0.202"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
common_x = { version = "0.8", default-features = false, features = [
    "config",
    "log",
    "restful",
] }
hex = "0.4"
k256 = "0.13"
reqwest = { version = "0.12", features = ["json"] }
sea-query = { version = "1.0.0-rc.20", default-features = false, features = [
    "audit",
    "backend-postgres",
    "derive",
    "postgres-array",
    "postgres-interval",
    "postgres-vector",
] }
sea-query-sqlx = { version = "0.8.0-rc.9", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid",
    "postgres-array",
    "postgres-vector",
] }
serde = "1.0"
serde_json = "1.0"
serde_ipld_dagcbor = { version = "0.6", features = ["codec"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "timeout"] }
tracing = "0.1"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
validator = { version = "0.20", features = ["derive"] }

[lints.clippy]
missing_const_for_fn = "warn"

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[profile.dev]
debug = true
opt-level = 0

[profile.fast]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[profile.release]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1
